# LogicToolboxLib

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json
cmake/: Config.cmake.in  ConfigVersion.cmake.in  FindGlog.cmake  FindGraphViz.cmake  FindROOT.cmake  Findgcovr.cmake  InstallConfig.cmake  LibraryConfig.cmake  SetEnv.cmake  Uninstall.cmake.in  reconfigure.sh  template.txt  template_src.txt  template_test.txt
docs/: Doxyfile.in  mainpage.dox
include/: CoreEvaluator.h  Expression.h  Graph.h  Operators.h  ResultTree.h  Token.h  Universe.h  Variable.h  World.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  version.h  version.h.in
src/Core/: Operators.cpp
src/Evaluator/: CoreEvaluator.cpp  ResultTree.cpp
src/Graph/: Graph.cpp
src/Parser/: Expression.cpp  Token.cpp
src/Universe/: Universe.cpp  Variable.cpp  World.cpp
src/rapidjson/: document.h  encodings.h  memorybuffer.h  pointer.h  reader.h  schema.h  stringbuffer.h  writer.h
src/rapidjson/error/: error.h
src/rapidjson/internal/: biginteger.h  diyfp.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  swap.h
test/: CMakeLists.txt  Makefile  UniverseConfig.json  alokacija.cpp  cmake_install.cmake  graph.dot  hello.cpp  hello.h  main.cpp
testCoverage/: CMakeLists.txt  Makefile  cmake_install.cmake  test_hello.cpp
